// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDividerStyles Get a correct divider styles 1`] = `
Object {
  "general": Object {
    "border-color": "rgb(255, 99, 71)",
    "border-right": "none",
    "border-style": "null",
    "border-top-width": "1px",
    "width": "3px",
  },
  "label": "Divider",
}
`;

exports[`getDividerStyles Get a correct divider styles 2`] = `
Object {
  "general": Object {
    "border-color": "rgb(255, 99, 71)",
    "border-right-width": "2px",
    "border-style": "null",
    "border-top": "none",
    "height": "4%}",
  },
  "label": "Divider",
}
`;

exports[`getDividerStyles Get a correct divider styles 3`] = `
Object {
  "general": Object {
    "align-items": "center",
    "flex-direction": "row",
    "justify-content": "flex-start",
  },
  "label": "Divider",
}
`;

exports[`getDividerStyles Get a correct divider styles 4`] = `
Object {
  "general": Object {
    "align-items": "flex-start",
    "flex-direction": "",
    "justify-content": "center",
  },
  "label": "Divider",
}
`;
